@@ -1,3 +1,8 @@
+Sat Jun 27 12:44:04 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/cavernlog.cc,src/mainfrm.cc: Use wxFopen() rather than
+	  conditionally calling fopen() or _wfopen() depending on the platform.
+
 Sat Jun 27 12:42:57 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/gfxcore.cc: Create wxFileInputStream directly, avoiding
